define proper business domain logics